Fix double scrolling

--- a/src/components/share/Header.css
+++ b/src/components/share/Header.css
@@ -1,7 +1,7 @@
 .header {
   /* height: 800px; */
   padding-top: 7%;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   /* background: var(--main-bg-color); */
   display: flex;
